# GoHabbit

./: .env  .gitignore  Dockerfile  LICENSE  README.md  cli.py  pyproject.toml  requirements.txt  start.bat  start.sh  youkassa.txt
bot/: __init__.py  __main__.py  callback_data.py  config.py  core.py  markups.py
bot/database/: __init__.py  models.py
bot/filters/: __init__.py
bot/habit/: habit_settings.py
bot/payments/: promocode.py  subscription.py  youpay.py
bot/phrases/: __init__.py  admin_phrases.py  button_phrases.py  phrases_for_prompt.py
bot/routers/: __init__.py  chat_member.py  error.py  prompt.py
bot/routers/admin/: __init__.py  give_access.py  remove_access.py
bot/routers/user/: __init__.py  commands.py  commandss.py  start.py
bot/schedule/: __init__.py  jobs.py
bot/state/: __init__.py  groups.py
bot/utils/: __init__.py  bot.py  loader.py  paths.py  router.py  services.py  startup.py  token_service.py  tortoise_storage.py
